# backend

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  alembic.ini  doctor.sql  pyproject.toml  requirement.txt  supabase_rls.sql  supabase_schema.sql
erp_rag_claude_code/: .sprint_state.json  BEST_PRACTICES.md  CHANGELOG.md  CLAUDE.md
erp_rag_claude_code/agents/: committer.md  executor.md  planner.md  tester.md
erp_rag_claude_code/docs/: ChronicCare_BMC.docx  ChronicCare_Backend_Sprint_Plan.docx  ChronicCare_ExecutionPlan.docx  ChronicCare_Nour_Architecture.docx  split_roles.txt
erp_rag_claude_code/memory/: MEMORY.md  feedback_code_structure.md  feedback_commit_scope.md  feedback_domain_models_location.md  feedback_embed_pipeline.md  feedback_task_by_task.md
erp_rag_claude_code/scripts/: read_docs.py  sprint_status.py  start_session.py
models/: risk_tree.pkl
scripts/: seed_demo_data.py
src/abstraction/ports/: __init__.py  llm_port.py  ml_port.py  notification_port.py  report_generator_port.py  risk_port.py
src/abstraction/repositories/: __init__.py  doctor_repository.py  medication_log_repository_port.py  medication_schedule_repository_port.py  patient_repository.py  patient_repository_port.py  risk_event_repository_port.py  sensor_reading_repository_port.py
src/application/services/: adherence_service.py  feature_mapper.py  reminder_service.py  report_service.py  risk_router.py
src/application/use_cases/: conversation_usecase.py  doctor_usecase.py  patient_usecase.py
src/data/: darija_glossary.json
src/domain/: exceptions.py
src/domain/entities/: __init__.py  conversation_log.py  conversation_turn.py  doctor.py  family_member.py  medication_log.py  medication_schedule.py  patient.py  patient_report.py  risk_event.py  sensor_reading.py
src/domain/models/: __init__.py  api_schemas.py  auth_schemas.py  doctor_schemas.py  llm_models.py  patient_schemas.py  reminder_models.py  risk_models.py
src/infrastructure/: scheduler.py
src/infrastructure/cache/: redis_session.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: __init__.py  base.py  models.py  session.py
src/infrastructure/intelligence/: __init__.py  gemini_client.py  glossary.py  patient_profile_loader.py
src/infrastructure/middleware/: pii.py
src/infrastructure/ml/: __init__.py  real_risk_scorer.py  risk_classifier.py
src/infrastructure/notifications/: __init__.py  gmail_adapter.py  reminder_email.py
src/infrastructure/pdf/: reportlab_generator.py
src/infrastructure/sensors/: bracelet_simulator.py
src/migrations/: README  env.py
src/notebooks/: risk_tree_training.ipynb
src/scripts/: seed_adherence.py  seed_demo_data.py  train_risk_ebm.py  train_risk_tree.py  validate_workflow.py
tests/: conftest.py
tests/unit/: test_database_models.py  test_llm_models.py  test_risk_classifier.py  test_settings.py
(+39 files in other folders)
