[project]
name = "chroniccare-nour-backend"
version = "0.1.0"
description = "Backend services for ChronicCare Nour."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0,<0.22",
    "alembic>=1.16.0,<2.0",
    "pydantic-settings>=2.10.0,<3.0",
    "sqlalchemy>=2.0.41,<3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=1.0.0,<2.0",
    "ruff>=0.11.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src"]
