[project]
name = "chroniccare-nour-backend"
version = "0.1.0"
description = "Backend services for ChronicCare Nour."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework & server
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    # Database
    "aiosqlite>=0.21.0,<0.22",
    "alembic>=1.16.0,<2.0",
    "sqlalchemy>=2.0.41,<3.0",
    "supabase>=2.10.0,<3.0",
    # ML / data
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "joblib>=1.3.0",
    # LLM
    "google-genai>=1.0.0",
    # Gmail API (reminder emails)
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.0.0",
    # Scheduler
    "apscheduler>=3.10.0,<4.0",
    # PDF generation
    "reportlab>=4.0.0",
    # Cache
    "redis>=5.0.0",
    # Config & validation
    "pydantic-settings>=2.10.0,<3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0",
    "pytest>=8.3.0,<9.0",
    "pytest-asyncio>=1.0.0,<2.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["src"]

[[tool.mypy.overrides]]
# supabase-py ships no py.typed marker.
module = [
    "supabase",
    "supabase.*",
    "postgrest",
    "postgrest.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# google-genai ships no py.typed marker.
module = [
    "google.genai",
    "google.genai.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "apscheduler",
    "apscheduler.*",
    "reportlab",
    "reportlab.*",
    "googleapiclient",
    "googleapiclient.*",
]
ignore_missing_imports = true
